[tool.poetry]
name = "ddn3"
version = "1.0.1"
description = "Dependency network analysis under two conditions"
authors = ["Yizhi Wang", "Minta Lu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
scipy = "^1.11.4"
numba = "^0.58.1"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
